add chunks for learning and script for rotating of positive cases

--- a/docker/TODO
+++ b/docker/TODO
@@ -1,4 +1,7 @@
-create simple model
+create simple model +
+create more data with marked 1, try different sizes
+extract square with nevus
+
 improve by focus image
 exclude duplicates
 improve by learn on different image sizes
