--- a/docker/TODO
+++ b/docker/TODO
@@ -1,3 +1,8 @@
+orig image -> croped image -> no hair image
+1. no_hair
+2. counter extract or crop by aprox rectangle
+
+
 512
 remove hair
 additional params model
