--- a/docker/TODO
+++ b/docker/TODO
@@ -1,7 +1,7 @@
 orig image -> croped image -> no hair image
 1. no_hair
 2. counter extract or crop by aprox rectangle
-
+!try without imagenet weights
 
 512
 remove hair
