--- a/docker/TODO
+++ b/docker/TODO
@@ -1,3 +1,13 @@
+ansemble -> freeze model
+
+
+resize 600-> no hair -> central crop->normalize -> gausian blur
+
+ img = tf.image.random_flip_left_right(img)
+        img = tf.image.random_saturation(img, 0.7, 1.3)
+        img = tf.image.random_contrast(img, 0.8, 1.2)
+        img = tf.image.random_brightness(img, 0.1)
+
 Preprocessign
 tfa.image.mean_filter2d(img, filter_shape=11) https://www.tensorflow.org/addons/tutorials/image_ops
 
