--- a/python/bird/TODO
+++ b/python/bird/TODO
@@ -1,3 +1,19 @@
+split by 5 secs
+extract mfcc -> denoise(https://www.kaggle.com/mauriciofigueiredo/intro-to-filtering-process-model-submitting)
+-> normalize librosa.util.normalize(y, axis=0)
+add augmentation  add  noise, shift https://medium.com/@makcedward/data-augmentation-for-audio-76912b01fdf6
+infinite dataset
+split predi
+ctions by 5 sec use effnet ?
+
+
+lta lon as feature
+
+add month of record as feature
+
+
+
+----0.54
 add mcfc feature
 sample all data
 use latitude
