--- a/python/bird/TODO
+++ b/python/bird/TODO
@@ -1,3 +1,5 @@
+several birds preds?
+
 split by 5 secs
 extract mfcc -> denoise(https://www.kaggle.com/mauriciofigueiredo/intro-to-filtering-process-model-submitting)
 -> normalize librosa.util.normalize(y, axis=0)
