test/train iteration

--- a/python/torch/soundscapes/TODO.txt
+++ b/python/torch/soundscapes/TODO.txt
@@ -17,8 +17,15 @@ This should overwrite the ./model/dummy-model.txt file, so subsequent testing wi
 
 
 ######Remote run########
-ffmpeg from data to wdata using bash
+ffmpeg from data to wdata using bash +
 handle separators
 #1-MEANS SKIP CONVERTATION
 ./train.sh /data/train/ 1
 ./test.sh /data/test/ /wdata/solution.csv 1
+
+1. 5 sec learn estimate
+2. 5-fold 5 sec learn
+3. Add data balance from audio slices
+4. Extract speech
+5. Model for each class?
+6. Model from kaggle?
