Add test audio preprocessing

--- a/python/torch/soundscapes/TODO.txt
+++ b/python/torch/soundscapes/TODO.txt
@@ -21,12 +21,7 @@ ffmpeg from data to wdata using bash +
 handle separators
 #1-MEANS SKIP CONVERTATION
 ./train.sh /data/train/ 1 1
-./test.sh /data/test/ /wdata/solution.csv 1
+./test.sh /data/test/ /wdata/solution.csv 1 1
 
-1. 5 sec learn estimate +
-2. 5-fold 5 sec learn -
-2.1. Remove speech
-3. Add data balance from audio slices
-4. Extract speech
-5. Model for each class?
-6. Model from kaggle?
+1. Enable Augmentation
+2. Different nets
